sweeps/slurm-473235.out
  File "run.py", line 13
    def set_random_seeds(seed: int) -> None:
                             ^
SyntaxError: invalid syntax
